/*
 *
 */

2009-04-03 10:10 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * demos/dbExplorer/dbExplorer.prg
    * updated demo

  * include/wxharbour.ch
  * src/common/wx_harbour.cpp
  * src/common/wxhfuncs.prg
  * src/hrbcompat/tbrowse/wxhbrowse.prg
    * renamed wxh_* funcs (used in wxharbour.ch commands) to __wxh_*
      to be detected in crc32 calculation (wx_harbour.cpp)

  * src/raddox/dba.prg
    ! Fixed error on PopWS() when a empty workarea was used on PushWS()

  * src/raddox/ttable.prg
    * minor cleanup

  * src/wxbase/baseclasses/wxhwindow.prg
  * src/wxbase/baseclasses/wx_window.cpp
    + added Harbour specific code to hold a code block to be evaluated
      to set ::Enable property

    + added methods:
      + ::Disable
      + ::Enable
      + ::FindFocus
      + ::IsEnabled

2009-04-02 11:32 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * src/common/wxhfuncs.prg
    ! Fix to process an not code block type parameter to :Enable property

2009-04-02 11:28 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  * GNUmakefile
  * makefile.gcc
  * makefile.vc
    * updated makefile for last changes in moving source files

  * include/wxhevtdefs.h
  * include/wxh.h
  * src/wxbase/events/wx_evthandler.cpp
  * src/wxbase/events/wxhevthandler.prg
    + added wxMenuEvent class

  * src/common/wxhfuncs.prg
    + added capability to use a code block to be evaluated on
      wxEVT_MENU_OPEN event and assign the wxMenuItem :Enable property
      
  * src/wxbase/menu/wxhmenuitem.prg
  * src/wxbase/menu/wx_menuitem.cpp
    + added methods:
      + GetItemLabel
      + GetItemLabelText

  * src/wxbase/menu/wxhmenu.prg
  * src/wxbase/menu/wx_menu.cpp
    + added method:
      + GetMenuItems

2009-04-01 18:53 UTC-0600 Teo Fonrouge (teo/at/windtelsoft/dot/com)
  - src/wxbase/baseclasses/wx_ActivateEvent.cpp
  - src/wxbase/baseclasses/wx_commandevent.cpp
  - src/wxbase/baseclasses/wx_event.cpp
  - src/wxbase/baseclasses/wx_evthandler.cpp